# yawn-detector

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  build_dlib.sh  dvc.yaml  generate_plots.sh  params.yaml  pyproject.toml  requirements.txt  train.py
.dvc/: config
data/: raw.dvc  split.dvc
pipeline_outs/models/: .gitignore
pipeline_outs/results/: losses.json  test-plots.json  test-results.json  train-plots.json  train-results.json
src/pipelines/: evaluate.py  extract_raw.py  preprocess.py  train.py
