[tool.poetry]
name = "yawn-detector"
version = "0.1.0"
description = ""
authors = ["Jerrylee Isaac Geronimo <jrgeronimo@up.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
dvc = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
