[tool.poetry]
name = "yawn-detector"
version = "0.1.0"
description = ""
authors = ["Jerrylee Isaac Geronimo <jrgeronimo@up.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
face-recognition = "^1.3.0"
matplotlib = "^3.5.1"
sklearn = "^0.0"
loguru = "^0.5.3"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
dvc = {extras = ["gdrive"], version = "^2.9.3"}
ipykernel = "^6.6.1"
pre-commit = "^2.16.0"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
