[tool.poetry]
name = "yawn-detector"
version = "0.1.0"
description = ""
authors = ["Jerrylee Isaac Geronimo <jrgeronimo@up.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
sklearn = "^0.0"
loguru = "^0.5.3"
pandas = "^1.3.5"
streamlit = "^1.3.1"
streamlit-webcam-example = "^0.1.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.6.1"
autopep8 = "^1.6.0"
dvc = "^3.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
